--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@react-pdf/renderer": "^4.3.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@vitejs/plugin-rsc": "^0.5.9",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-router-dom": "^7.10.1",
+    "react-server-dom-parcel": "^19.2.3",
+    "react-server-dom-webpack": "^19.2.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
