--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ psycopg2-binary          # PostgreSQL driver (for Railway)
 # Auth and security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 
 # CORS and file uploads
 python-multipart==0.0.18
